Fixed scroll bar jumping

--- a/styles/demo.css
+++ b/styles/demo.css
@@ -12,7 +12,8 @@ html {
 	margin: 0;
 	padding: 0;
 	font: 16px/20px normal Arial;
-	background-color: #efefef;
+	background-color: var(--primary-color);
+	margin-left: calc(100vw - 100%);
 }
 
 body {
